--- a/README.html
+++ b/README.html
@@ -756,7 +756,7 @@ BUSINESS_PROCESS_KIESERVER_ROUTE_URL=http://localhost:8092</pre>
 </ul>
 </div>
 <div class="paragraph">
-<p>This executes all configurations set forth by the <code>docker-compose.yaml</code> file.</p>
+<p>This executes all configurations set forth by the <a href="docker-compose.yaml"><code>docker-compose.yaml</code></a> file.</p>
 </div>
 <div class="ulist">
 <ul>
@@ -960,7 +960,7 @@ curl -X POST $PAM_CLIENT_SERVICE_ROUTE_URL/rhpam/task/4/COMPLETE  -d "{\"approva
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-01-20 18:43:25 UTC
+Last updated 2021-01-20 20:58:12 UTC
 </div>
 </div>
 </body>
